--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1,user-scalable=no">
     <title></title>
     <link href="static/css/reset.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/> -->
     <script src="static/baseConfig.js"></script>
   </head>
   <body>
