--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1,user-scalable=no">
-    <title>积分商城</title>
+    <title></title>
     <link href="static/css/reset.css" rel="stylesheet">
     <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/> -->
     <script src="static/js/jweixin.js"></script>
