--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title></title>
     <link href="static/css/reset.css" rel="stylesheet">
     <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/> -->
-    <script src="static/js/jweixin.js"></script>
+    <!-- <script src="static/js/jweixin.js"></script> -->
     <script src="static/baseConfig.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+   
   </body>
 </html>
